updated the overall system
